Fix spacing

--- a/app/assets/stylesheets/styles/chat_page/friend_details.scss
+++ b/app/assets/stylesheets/styles/chat_page/friend_details.scss
@@ -3,11 +3,13 @@
     width: 22vw;
     border-left: 1px solid $boxBorder;
     height: 100%;
+    padding-top: 14px; // maybe remove?
 
     .friend-details-header {
       border-bottom: 1px solid $boxBorder;
       height: 64px;
-      padding: 0 10px 0 12px;
+      // padding: 0 10px 0 12px;
+      padding: 0 14px 16px 14px;
       display: flex;
       align-items: center;
       // cursor: pointer;
